--- a/src/root.css
+++ b/src/root.css
@@ -4,7 +4,6 @@ body {
   font-family: 'Comfortaa', 'Helvetica Neue', sans-serif;
 }
 
-
 a {
   overflow: hidden;
   position: relative;
@@ -56,8 +55,8 @@ a:hover span {
 /* Presentational Styles */
 body {
   display: grid;
-  font-family: 'Poppins', sans-serif;
-  font-size: 27px;
+  font-family: 'Comfortaa', sans-serif;
+  font-size: 18px;
   line-height: 1.5;
   height: 100vh;
   place-items: center;
